# plasticome

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  mkdocs.yml  pyproject.toml  run_flask.bat  run_flask.sh  start.sh
docs/: index.md
plasticome/: __init__.py
plasticome/config/: celery_config.py
plasticome/controllers/: fungi_controller.py  pipeline_controller.py
plasticome/routes/: app.py
plasticome/services/: Helpers.py  __init__.py  analysis_result_service.py  auth_user_service.py  blast_service.py  cazy_filter_service.py  dbcan_result_filter_service.py  dbcan_service.py  ecpred_result_filter_service.py  ecpred_service.py  email_service.py  genbank_service.py  plasticome_metadata_service.py
